--- a/usejni/build.gradle
+++ b/usejni/build.gradle
@@ -22,11 +22,11 @@ android {
     productFlavors {
     }
 
-//    sourceSets{
-//        main{
-//            jniLibs.srcDirs = ['src/main/jniLibs']
-//        }
-//    }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
 }
 
 dependencies {
